Added content proposals for pasm file argument